<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_layou_secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sahand.homework3.SecondaryActivity">

    <ImageView
        android:id="@+id/profile_picture_display"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_height="180dp"
        android:contentDescription="@string/profile_picture"
        app:srcCompat="@drawable/dog_picture" />

    <TextView
        android:id="@+id/name_and_age_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/occupation_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <!--<Button-->
        <!--android:id="@+id/back_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:onClick="toMain"-->
        <!--android:text="@string/back" />-->

</LinearLayout>