<resources>
    <string name="app_name">Dating App HW</string>
    <string name="my_name">Milaninia, Sahand 4/19/2018</string>
    <string name="submit_button">Submit</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="date_picker">Date Picker</string>
    <string name="field_hint">Enter Text</string>
    <string name="age_label">Age</string>
    <string name="back">Back</string>
    <string name="emptyFields">One or more fields are empty</string>
    <string name="underEighteen">You must enter a valid date of birth and be over 18 to enter</string>
    <string name="personal_description">Personal Description</string>
    <string name="occupation">Occupation</string>
    <string name="profile_picture">profile picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="settings_will_go_here">Settings will go here</string>
    <string name="matches_will_go_here">Matches will go here</string>
</resources>
